@@ -1,3 +1,12 @@
+2004-02-23  Jorn Baayen  <jbaayen@gnome.org>
+
+	* data/glade/InfoWindow.glade:
+	* src/InfoWindow.cs:
+	* src/Makefile.am:
+
+	Use GtkHTML for the information window. Obviously still far from
+	finished.
+
 2004-02-22  Jorn Baayen  <jbaayen@gnome.org>
 
 	* src/HandleView.cs:
